# Encryption

./: .gitignore  README.md  darc.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cli/: __init__.py  cli_entry.py
config/i18n/: en.json  zh_cn.json
config/presets/: default_standard.json
core/: __init__.py  app_paths.py  archive_stream.py  archiver.py  config_store.py  format_v3.py  i18n.py  layout.py  storage.py  zip_wrapper.py
docs/: format-v3.md  threat-model.md
gui/: __init__.py  extract_dialog.py  fonts.py  gui_entry.py  layout_fields.py  main_window.py  password_fields.py  payload_editor_dialog.py  settings_dialog.py  theme.py  window_geometry.py  workers.py  write_dialog.py  zip_layer_dialog.py
packaging/: deniable_archiver.spec
packaging/assets/: README.md
scripts/: build_pyinstaller.py
tests/: test_archiver_core.py  test_cli_v3.py  test_config_gui_cli.py  test_gui_task_tabs.py  test_packaging_v3.py  test_runtime_paths.py  test_workers_v3.py  test_zip_wrapper_v3.py
