[project]
name = "deniable-archiver"
version = "3.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = [".", "tests"]
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "workdir",
  "**/__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["cli", "core", "gui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
